# dut-control

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/scripts/: sanatizer-pycodestyle  sanatizer-pyflake8  sanatizer-radon  sanatizer-shellcheck
.github/workflows/: pytest.yml  sanatizers.yml
dut_control/: admin.py  client.py  server.py
dut_control/data/: conf.yml
dut_control/data/clients/: client-01.yml
dut_control/data/nodes/: machine-01.yml
tests/: test_server.py
